# ericsson-2015

./: CMakeLists.txt  README.md  kumbi_ericson  kumbi_ericson_v1.1
final/: BMResponseHelper.cpp  Elements.cpp  Elements.hpp  Elements.pb.cc  Elements.pb.h  Elements.proto  Game.cpp  Game.hpp  Global.cpp  Global.hpp  Global.pb.cc  Global.pb.h  Point.cpp  Point.hpp  State.cpp  State.hpp  TODO.txt  Util.hpp  input.txt  input2.txt  kumbi_main.cpp  kumbi_main_v1.12.cpp  kumbi_main_v1.12.hpp  main.cpp  responseHelper.hpp
final/docs/: Global.proto  feladat.html  map_10_b.xlsx  map_1v1.xlsx  stream.hpp
qualif/: .gitignore  CMakeLists.txt  create_zip.sh
qualif/doc/: feladat.html
qualif/files/: Elements.proto  Global.pb.cc  Global.pb.h  Global.proto  Response.proto  main.cpp  responseHelper.hpp  stream.hpp
qualif/src/: BMResponseHelper.cpp  BMResponseHelper.hpp  Elements.cpp  Elements.hpp  Elements.pb.cc  Elements.pb.h  Game.cpp  Game.hpp  Global.cpp  Global.hpp  Point.cpp  Point.hpp  Response.pb.cc  Response.pb.h  State.cpp  State.hpp  Util.hpp  main.cpp  stream.hpp
qualif/test/: TestUtil.cpp  TestUtil.hpp  test.cpp
quiz/: 10.cpp  11.cpp  12.cpp  15_compileall.sh  15_generate.cpp  16.cpp  16_2.cpp  16_3.cpp  17.cpp  19.cpp  2.cpp  20.cpp  3.cpp  4.cpp  5.cpp  6.cpp  8.cpp  9.cpp
